[package]
authors = ["TQ Hirsch <thequux@thequux.com>"]
name = "qaraoke"
version = "0.1.0"

[features]
raspberry_pi = ["glium_pib"]

[dependencies]
byteorder = "0.5.3"
cdg = "0.1"
cdg_renderer = "0.1"
clap = "2.12"
crossbeam = "0.2.10"
fps_counter = "0.2"
glium = "0.14"
image = "0.21"
portaudio = "0.7"
sample = "0.6.2"

[dependencies.glium_pib]
version = "0.1.0"
optional = true

[dependencies.soxr]
path = "../soxr"

[dependencies.mpg123]
path = "../mpg123"

[dependencies.ogk]
path = "../ogk"
